# MicroLM

./: .gitignore  README.md  pyproject.toml
Readme/: 简历.md
Readme/项目全景图/: 01-项目总览.md  02-自研 MicroLM 主线.md
configs/: sft_lora.json
data/: README.md
microlm/model/: kvcache.py
microlm/training/: checkpoint.py
results/: kvcache_benchmark.csv
results/instructie_eval/summary/: detailed.csv
results/instructie_eval_sanity/summary/: detailed.csv
results/vllm_benchmark/: benchmark_summary_20260412_204210.csv  stability_summary_20260412_204357.csv
scripts/: check_structured_stability.py  run_instructie_eval.py
